# atr

./: .gitignore  Cargo.toml  atr.zsh  example.config.toml  readme.md
.github/workflows/: release.yml
scpt/: api_card.zsh  api_card_raid_win.zsh  api_chara.zsh  api_egg.zsh  api_fav.zsh  api_gift.zsh  api_ten.zsh  api_ten_auto.zsh  api_ten_su_reset.zsh  arch.zsh  at_img.zsh  at_search.zsh  bluesky.zsh  bot_card.zsh  bot_kawaii.zsh  bot_list.zsh  bsky_token.zsh  card_aicoin.zsh  card_box.zsh  card_coin.zsh  card_fortune.zsh  card_fortune_en.zsh  card_pay.zsh  card_tarot.zsh  card_tarot_en.zsh  diffusers.zsh  diffusion.zsh  diffusion_prompt.txt  dig.zsh  fan_art.zsh  follow_all.zsh  full_moon.j  invite.zsh  like_reply.zsh  mastodon.zsh  nyancat.zsh  nyancat_post.zsh  openai_like.zsh  openai_like_bot.zsh  openai_like_timeline.zsh  (+6 more)
src/: at_follow.rs  at_followers.rs  at_follows.rs  at_get_post_thread.rs  at_handle_update.rs  at_img_reply.rs  at_img_upload.rs  at_mention.rs  at_notify_limit.rs  at_notify_read.rs  at_post.rs  at_post_link.rs  at_profile.rs  at_refresh.rs  at_reply.rs  at_reply_link.rs  at_reply_media.rs  at_reply_og.rs  at_repost.rs  at_timeline.rs  at_timeline_author.rs  at_user_status.rs  data.rs  deepl.rs  describe.rs  main.rs  notify.rs  notify_read.rs  openai.rs  openai_char.rs  post.rs  post_link.rs  refresh.rs  reply.rs  reply_link.rs  session.rs  timeline_author.rs  token.rs
