[package]
name = "atr"
description = "at client in rust"
version = "0.0.1"
authors = ["syui <syui@syui.cf>"]
edition = "2021"

[dependencies]
seahorse = "*"
dotenv = "0.15"
serde_derive = "1.0"
serde_json = "1.0"
serde = "*"
config = { git = "https://github.com/mehcode/config-rs", branch = "master" }
shellexpand = "*"
curl = "*"
image = "*"
os_type = "2.4"
toml = "*"
anyhow = "1.0"
tokio = { version = "*", features = ["full"] }
structopt = "0.3.16"
futures = "0.3.5"
url = { version = "2.0", features = ["serde"] }
reqwest = { version = "*", features = ["json"] }
rustc-serialize = "*"
iso8601-timestamp = "0.2.10"
smol_str = "0.1.24"
